fixtures/errors/await_outside_async.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: await is only valid in async functions
 --> errors/await_outside_async.js:1:18
1 | function foo() { await 1; }
  |                  ^^^^^^^

